--- a/ScheduleLib/ScheduleLib.csproj
+++ b/ScheduleLib/ScheduleLib.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Oleg Boulanov</Authors>
-    <Company>uselessextras</Company>
+    <Company>UselessExtras</Company>
     <Description>Simple C# scheduling library</Description>
     <Copyright />
   </PropertyGroup>
