--- a/ScheduleLib/ScheduleLib.csproj
+++ b/ScheduleLib/ScheduleLib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Oleg Boulanov</Authors>
     <Company>UselessExtras</Company>
     <Description>Simple C# scheduling library</Description>
