--- a/ScheduleLib/ScheduleLib.csproj
+++ b/ScheduleLib/ScheduleLib.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>ScheduleLib</PackageId>
+    <Version>1.2.3</Version>
     <Authors>Oleg Boulanov</Authors>
     <Company>UselessExtras</Company>
     <Description>Simple C# scheduling library</Description>
-    <Copyright />
+    <Copyright>2019, Oleg Boulanov</Copyright>
   </PropertyGroup>
 
 </Project>
