--- a/ScheduleLib/ScheduleLib.csproj
+++ b/ScheduleLib/ScheduleLib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>UselessExtras.ScheduleLib</PackageId>
+    <PackageId>ScheduleLib</PackageId>
     <Version>1.2.3</Version>
     <Authors>Oleg Boulanov</Authors>
     <Company>UselessExtras</Company>
